fix(layout): Fix group visuals and icon alignment in sidebar

--- a/packages/browser-utils/src/styles/components/control/button.css
+++ b/packages/browser-utils/src/styles/components/control/button.css
@@ -9,6 +9,7 @@
   border: none;
   border-radius: var(--spx-border-radius);
   color: var(--spx-color-on-secondary);
+  min-height: var(--spx-control-height-default);
   height: var(--spx-control-height-default);
   font-size: medium;
 
